_Structure-Management/v0.2/Structure_Instruction.md
---
id: structure-instruction-v02
type: instruction
status: approved

ai_access: true
owner: Management
author: @levadiani
classification: internal

summary: "Определяет стандартную иерархию папок компании Galt и структуру проектов на основе PMBOK/ISO 21500."
topics: [structure, folders, projects, organization]
language: ru
---

# Инструкция по Структуре Папок и Данных (v0.2)

## 1. Введение
Эта инструкция определяет стандартную иерархию папок для компании Galt. Жесткая структура необходима для того, чтобы и люди, и ИИ-агенты могли однозначно находить и сохранять информацию.

## 2. Общая Структура Компании (Company Root)

Корневая директория делится на функциональные департаменты. Каждая папка имеет цифровой индекс `XX-Name` для сортировки.

### [00-General] - Общие вопросы
*   `00-01-Mission-Values`: Миссия, Ценности, Бренд-код.
*   `00-02-BrandBook`: Логотипы, Шрифты, Шаблоны презентаций.
*   `00-03-Templates`: Шаблоны фирменных бланков, приказов.
*   `00-04-Contacts`: Телефонный справочник, Оргструктура.

### [01-Management] - Управление
*   `01-01-Strategy`: Стратегические планы (1/3/5 лет).
*   `01-02-Board-Meetings`: Протоколы совета директоров.
*   `01-03-Reports`: Сводная отчетность для акционеров.
*   `01-04-Partnerships`: Ключевые партнерства и альянсы.
*   `01-05-Structure-Management`: Управление самой структурой папок (этот раздел).

### [02-HR] - Персонал
*   `02-01-Recruiting`: База резюме, Описания вакансий.
*   `02-02-Onboarding`: Материалы для адаптации новичков.
*   `02-03-Personnel-Files`: Личные дела (*Ограниченный доступ*).
*   `02-04-Regulations`: Должностные инструкции, График отпусков, ПВТР.

### [03-Finance] - Финансы
*   `03-01-Planning`: Бюджеты, БДР (Доходы/Расходы), БДДС (Движение средств).
*   `03-02-CashFlow`: Платежный календарь (оперативный).
*   `03-03-Accounting`: Первичка, Сверки, Налоги.
*   `03-04-Payroll`: Зарплатные ведомости (*Ограниченный доступ*).

### [04-Legal] - Юридический отдел
*   `04-01-Corporate`: Уставные документы, Лицензии, СРО.
*   `04-02-Contracts-Templates`: Шаблоны договоров (Подряд, Поставка, Услуги).
*   `04-03-Litigation`: Судебные дела и претензии.
*   `04-04-Compliance`: Проверки госорганов, Регуляторика.

### [05-Projects] - Проекты
*   Корневая папка для всех проектов.
*   Каждый проект имеет свою отдельную папку: `05-Projects/[ProjectName]`.

### [06-Engineering-Technical] - Инженерно-технический отдел
*   `06-01-Norms`: Библиотека норм (СНИПы, ГОСТы, СП).
*   `06-02-Standard-Solutions`: Типовые узлы, Библиотека семейств BIM.
*   `06-03-HSE`: Охрана труда и Техника безопасности (регламенты).
*   `06-04-Equipment-Manuals`: Паспорта и инструкции на оборудование.

### [07-Procurement-Logistics] - Закупки и Логистика
*   `07-01-Vendor-List`: База поставщиков с рейтингами.
*   `07-02-Price-Analysis`: Мониторинг рыночных цен.
*   `07-03-Tenders`: Тендерная документация (общая).
*   `07-04-Logistics-Routes`: Карты проезда, Тарифы перевозчиков.

### [08-Sales-Marketing] - Продажи и Маркетинг
*   `08-01-Marketing-Materials`: Буклеты, Рендеры, Видео.
*   `08-02-Sales-Scripts`: Скрипты продаж, Книга продаж, FAQ.
*   `08-03-CRM-Analytics`: Выгрузки и отчеты из CRM.
*   `08-04-Competitors`: Анализ конкурентов.

### [09-IT-Security] - ИТ и Безопасность
*   `09-01-Access-Control`: Матрица доступов.
*   `09-02-Network-Map`: Схема сети и инфраструктуры.
*   `09-03-Software-Licenses`: Учет лицензий ПО.
*   `09-04-Security-Policies`: Политики ИБ.

---

## 3. Структура Проекта (Project Structure)

Внутри папки `05-Projects/[ProjectName]` используется структура, основанная на жизненном цикле (PMBOK/ISO 21500).

> **Важно**: Все папки именуются через дефисы (не точки и пробелы): `1-Management`, `1-1-Charter`

#### 📂 1-Management (Управление проектом)
*   `1-1-Charter`: Устав проекта, Паспорт, Бизнес-план.
*   `1-2-Schedule`: Графики работ (MS Project, Primavera).
*   `1-3-Budget`: Бюджет проекта, план-факт затрат.
*   `1-4-Risks`: Реестр рисков.
*   `1-5-Meetings`: Протоколы проектных совещаний.
*   `1-6-Correspondence`: Входящие/Исходящие письма по проекту.

#### 📂 2-Permits-Legal (ИРД и Согласования)
*   `2-1-Land`: Документы на землю (Выписки, ГПЗУ, Геология, Геодезия).
*   `2-2-Permits`: Разрешение на строительство (РНС), ТУ на подключение сетей.
*   `2-3-Approvals`: Согласования с госорганами, Экспертиза.
*   `2-4-Project-Contracts`: Договоры, специфичные для проекта.

#### 📂 3-Design (Проектирование)
*   `3-1-Concept`: Эскизный проект, Концепция, Буклет.
*   `3-2-Stage-P`: Стадия П (Проектная документация).
*   `3-3-Stage-RD`: Стадия Р (Рабочая документация).
    *   `AR` (Архитектура)
    *   `KR` (Конструктив)
    *   `IOS` (Инженерные сети)
*   `3-4-BIM-Model`: Информационная модель.
*   `3-5-Author-Supervision`: Журналы авторского надзора.

#### 📂 4-Construction (Строительство)
*   `4-1-Site-Log`: Общий журнал работ (КС-6).
*   `4-2-Photo-Reports`: Фотоотчеты (сортировка по датам).
*   `4-3-Acts`: Акты скрытых работ (АОСР), КС-2/КС-3.
*   `4-4-Safety`: Журналы ТБ на объекте.
*   `4-5-Quality-Control`: Предписания технадзора.

#### 📂 5-Supply (Снабжение объекта)
*   `5-1-Requests`: Заявки на материалы.
*   `5-2-Invoices`: Счета и накладные.
*   `5-3-Logistics`: Схемы разгрузки.

#### 📂 6-Sales (Продажи - если применимо)
*   `6-1-Inventory`: Шахматка.
*   `6-2-Clients`: ДДУ/Купля-продажа.

#### 📂 9-Archive-[ProjectName] (Внутренний архив)
*   `9-1-Obsolete`: Устаревшие версии, аннулированные чертежи.
